- Redimensionamento da logo e otimização - Reposicionamento do Lista de Compras

--- a/src/app/components/listas/listas.component.html
+++ b/src/app/components/listas/listas.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-3">
-          <img src="../../../assets/icons/listNest-logo.png" style="width: 25vw; padding: 0; margin:0">
+          <img src="../../../assets/icons/listNest-nova-logo.png" style="width: 120px; padding: 0; margin:5px">
         </div>
         <div class="col-8">
-            <h3 class="text-center" style="margin-top:5vh;">Lista de Compras</h3>
+            <h3 class="text-center" style="margin-top:7.5vh; margin-left:6vh">Lista de Compras</h3>
         </div>
     </div>
     <hr/>
